se agragaron index,portafolio,cvu

--- a/acerca.html
+++ b/acerca.html
@@ -15,20 +15,18 @@
         <a href="cvu.html">Cvu</a>|
         <a href="acerca.html">Acerca de</a>
         </div>
-        <div class="titulo">
-        <h1>Sitio oficial de Sergio Diaz Contreras</h1>
-        </div>
-        <div class="content">
-            <table class="tablaPrincipal">
-            <tr>
-                <td><a href="identidad.html"><img src="img/identidad.jpg"></a></td>
-                <td><a href="portafolio.html"><img src="img/portafolio.jpg"></a></td>
-                <td><a href="cvu.html"><img src="img/cvu.jpg"></a></td>
-            </tr>
-            </table>
+        <div class="nombre">
+            <h1> Quien es <br><br>
+                @Sergio Diaz Contreras <br><br>
+                Freelancer, emprendedora de negocios de software <br>
+                Gusto por la ciencia computacional <br>
+                Aporta a la comunidad de Bootstrap y Django <br>
+                Mis favoritos <br>
+                Leer, Escuchar música de sinfónica, Ver películas de ciencia ficción</p>
         </div>
 
+        
 </body>
 </html>
-  
-    
+
+<body>
