--- a/cvu.html
+++ b/cvu.html
@@ -15,20 +15,18 @@
         <a href="cvu.html">Cvu</a>|
         <a href="acerca.html">Acerca de</a>
         </div>
-        <div class="titulo">
-        <h1>Sitio oficial de Sergio Diaz Contreras</h1>
-        </div>
-        <div class="content">
-            <table class="tablaPrincipal">
-            <tr>
-                <td><a href="identidad.html"><img src="img/identidad.jpg"></a></td>
-                <td><a href="portafolio.html"><img src="img/portafolio.jpg"></a></td>
-                <td><a href="cvu.html"><img src="img/cvu.jpg"></a></td>
-            </tr>
-            </table>
+        <div class="nombre">
+            <h1> Curriculum Vitae <br>
+                Sergio Diaz Contreras <br><br>
+                maestria en sistemas computacionales tec de merida<br>
+                Certificado en scrum y programación extrema <br>
+                Dominio del 80% en inglés <br>
+                Habilidades <br>
+                Autodidactica, Proactivo, Trabajo en equipo</p>
         </div>
 
+        
 </body>
 </html>
-  
-    
+
+<body>
