--- a/identidad.html
+++ b/identidad.html
@@ -12,23 +12,18 @@
         <a href="index.html">Inicio</a> |
         <a href="identidad.html">Identidad</a> |
         <a href="portafolio.html">Portafolio</a> |
-        <a href="cvu.html">Cvu</a>|
+        <a href="cvu.html">Cvu</a>
         <a href="acerca.html">Acerca de</a>
         </div>
-        <div class="titulo">
-        <h1>Sitio oficial de Sergio Diaz Contreras</h1>
-        </div>
-        <div class="content">
-            <table class="tablaPrincipal">
-            <tr>
-                <td><a href="identidad.html"><img src="img/identidad.jpg"></a></td>
-                <td><a href="portafolio.html"><img src="img/portafolio.jpg"></a></td>
-                <td><a href="cvu.html"><img src="img/cvu.jpg"></a></td>
-            </tr>
-            </table>
+        <div class="nombre">
+            <h1>Sergio Diaz Contreras</h1>
         </div>
 
+        <div class="foto">
+            <img src="img/sergio.png">
+        </div>
+        
 </body>
 </html>
-  
-    
+
+<body>
