--- a/portafolio.html
+++ b/portafolio.html
@@ -15,20 +15,18 @@
         <a href="cvu.html">Cvu</a>|
         <a href="acerca.html">Acerca de</a>
         </div>
-        <div class="titulo">
-        <h1>Sitio oficial de Sergio Diaz Contreras</h1>
-        </div>
-        <div class="content">
-            <table class="tablaPrincipal">
-            <tr>
-                <td><a href="identidad.html"><img src="img/identidad.jpg"></a></td>
-                <td><a href="portafolio.html"><img src="img/portafolio.jpg"></a></td>
-                <td><a href="cvu.html"><img src="img/cvu.jpg"></a></td>
-            </tr>
-            </table>
+        <div class="nombre">
+            <h1>Perfil profesional</h1>
+             <h1> Sergio Diaz Contreras</h1>
+             <p>Arquitecto de software <br>
+                Con 10 años de experiencia en desarrollo de software</p>
+                <p>Trabajos realizados <br>
+                    Participación en el Sistema de inventarios para empresa ADO
+                    Elaboración de sitio web de compras en línea para Andrea zapatos</p>
         </div>
 
+        
 </body>
 </html>
-  
-    
+
+<body>
